# rust-os

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  rust-toolchain.toml
.github/workflows/: verify.yaml
kernel/: Cargo.toml  build.rs
kernel/src/: main.rs  math.rs  qemu.rs  raytracer.rs  writer.rs
kernel/src/macros/: mod.rs  serial.rs
kernel/src/tests/: mod.rs
src/: main.rs
