[package]
name = "rust-os-kernel"
authors = ["c1m50c <https://github.com/c1m50c>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lazy_static = { version = "1.4.0", features = [ "spin_no_std" ] }
noto-sans-mono-bitmap = "0.2.0"
bootloader_api = "0.11.3"
fixed-vectors = "3.2.1"
spin = "0.9.8"
